Ajout configuration Plesk compatible

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "yes | pnpm install && rm -rf node_modules/.vite-temp && tsc -b && vite build",
-    "lint": "yes | pnpm install && eslint .",
-    "preview": "yes | pnpm install && vite preview"
+    "build": "npm install && npm run build:prod",
+    "build:prod": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,6 +46,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "^8.5.2",
+    "express": "^4.18.2",
     "framer-motion": "^12.18.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
