feat: Refactor cart for improved UX
This commit refactors the shopping cart to improve user experience.

- Unifies the "Add to Cart" and "Your Cart" sections into a single, streamlined interface.
- Implements automatic quantity updates, removing the need for a separate "Add to Cart" button.
- Automatically removes items from the cart when their quantity is set to 0.
- Updates PayPal configuration to use the production client ID.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "yes | pnpm install && rm -rf node_modules/.vite-temp && tsc -b && vite build",
-    "lint": "yes | pnpm install && eslint .",
-    "preview": "yes | pnpm install && vite preview"
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
